<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="_7_minute_workout_image">7 minute workout image</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="ten">10</string>
    <string name="exercise_name">EXERCISE NAME</string>
    <string name="thirty">30</string>
    <string name="image_of_exercise">image of exercise</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="jumping_jacks">Jumping jacks</string>
    <string name="recyclerView_dummy_one">1</string>
    <string name="end_of_exercises">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_finished_the_workout">You have finished the workout!</string>
    <string name="exercise_done">Exercise done</string>
    <string name="finish">Finish</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="custom_dialog_message">This will stop your workout. You\'ve come this far , are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="calculate_bmi_actionBar_heading">CALCULATE BMI</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="dummy_result">15.00</string>
    <string name="dummy_bmiType">Normal</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_lbs">WEIGHT (in lbs)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history">HISTORY</string>
    <string name="exercise_history">exercise history</string>
    <string name="main_activity_title_history">History</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>