<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_of_exercises"
        android:textColor="@color/purple_700"
        android:textSize="38sp"
        />
    <LinearLayout
        android:layout_width="@dimen/start_button_size"
        android:layout_height="@dimen/start_button_size"
        android:layout_marginTop="@dimen/start_button_margin_top"
        android:gravity="center"
        android:background="@drawable/item_color_accent_border_ripple_effect"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_done"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/start_button_label_textSize"
            android:contentDescription="@string/exercise_done" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="25sp"
        android:text="@string/congratulations"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5sp"
        android:textColor="@color/black"
        android:text="@string/you_have_finished_the_workout"/>
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:layout_gravity="bottom"
        android:text="@string/finish"
        android:textSize="18sp"/>

</LinearLayout>