<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_message"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
       >
        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginRight="15dp"
            android:text="@string/yes"
            android:layout_marginEnd="15dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/no"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>