<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BmiActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/white_color" />
    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar_bmi_activity"
        android:background="@drawable/radio_group_tab_background">
        <RadioButton
            android:id="@+id/rb_metricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/metric_units"
            android:checked="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/unit_tab_selector"
            android:textColor="@drawable/unit_tab_text_color_selector"
            android:button="@null"
            />
        <RadioButton
            android:id="@+id/rb_USUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/us_units"
            android:checked="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/unit_tab_text_color_selector"
            android:background="@drawable/unit_tab_selector"
            android:button="@null"
            />

    </RadioGroup>
    <LinearLayout
        android:id="@+id/ll_unitsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/rgUnits"
        android:padding="10dp"
     >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_MetricUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_MetricUnitHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:textSize="16sp"
                android:visibility="visible"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_UsUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_lbs"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/llUsUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:visibility="gone">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsUnitHeightInFeet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_UsUnitHeightInFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feet"
                android:textSize="16sp"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiUsUnitHeightInInch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_UsUnitHeightInInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inch"
                    android:textSize="16sp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llDisplayBmiResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/tv_yourBmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_bmi"
                android:textSize="16sp"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/tv_bmiValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:text="@string/dummy_result"
                />
            <TextView
                android:id="@+id/tv_bmiType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:text="@string/dummy_bmiType"
             />
            <TextView
                android:id="@+id/tv_bmiDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:text="@string/dummy_bmiType" />

        </LinearLayout>
        <Button
            android:id="@+id/btn_calculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="3dp"
            android:background="@color/purple_700"
            android:textSize="18sp"
            android:text="@string/calculate"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>