<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/main_screen_main_layout_padding">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/_7_minute_workout_image"
            android:src="@drawable/img_main_page" />

        <LinearLayout
            android:id="@+id/ll_Start"
            android:layout_width="@dimen/start_button_size"
            android:layout_height="@dimen/start_button_size"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/start_button_margin_top"
            android:background="@drawable/item_color_accent_border_ripple_effect"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/start_button_label_textSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_bmi"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/green_recyclerview_exercise_completed_background"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bmi"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/calculator"
                    android:textColor="@color/purple_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_history"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/green_recyclerview_exercise_completed_background"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_history"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:contentDescription="@string/exercise_history"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/main_activity_title_history"
                    android:textColor="@color/purple_700"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>